Add images to site

--- a/index.html
+++ b/index.html
@@ -23,20 +23,28 @@
       <h1>page 1</h1>
       <section class="card-view">
         <div class="card">
+			<img src="./assets/cards/page-of-pentacles.png" class="tarot" alt="A youthful figure, looking intently at the pentacle that hovers over his raised hands"/>
         </div>
         <div class="card">
+			<img src="./assets/cards/ace-of-pentacles.png" class="tarot" alt="asd"/>
+         </div>
+        <div class="card">
+			<img src="./assets/cards/high-priestess.png" class="tarot" alt="asd"/>
         </div>
         <div class="card">
+			<img src="./assets/cards/ten-of-pentacles.png" class="tarot" alt="asd"/>
+         </div>
+        <div class="card">
+			<img src="./assets/cards/ace-of-pentacles.png" class="tarot" alt="asd"/>
         </div>
         <div class="card">
+			<img src="./assets/cards/star.png" class="tarot" alt=""/>
         </div>
         <div class="card">
+			<img src="./assets/cards/two-of-cups.png" class="tarot" alt=""/>
         </div>
         <div class="card">
-        </div>
-        <div class="card">
-        </div>
-        <div class="card">
+			<img src="./assets/cards/king-of-wands.png" class="tarot" alt=""/>
         </div>
       </section>
   </section>
