--- a/index.html
+++ b/index.html
@@ -23,28 +23,29 @@
       <h1>page 1</h1>
       <section class="card-view">
         <div class="card">
-			<img src="./assets/cards/page-of-pentacles-c.png" class="tarot" alt="A youthful figure, looking intently at the pentacle that hovers over his raised hands"/>
+			<div><img src="./assets/cards/page-of-pentacles-c.png" class="tarot-img" alt="A youthful figure, looking intently at the pentacle that hovers over his raised hands"/></div>
+			<div><h3 class="tarot-title">One of Pentacles</h3></div>
         </div>
         <div class="card">
-			<img src="./assets/cards/ace-of-pentacles-c.png" class="tarot" alt="A hand issuing from a cloud- holds up a pentacle over a garden with mountains in the distance."/>
+			<img src="./assets/cards/ace-of-pentacles-c.png" class="tarot-img" alt="A hand issuing from a cloud- holds up a pentacle over a garden with mountains in the distance."/>
          </div>
         <div class="card">
-			<img src="./assets/cards/high-priestess-c.png" class="tarot" alt="A woman in blue robes with a crown sits between a two pillars pillar with a tapestry of fronds and fruit behind her."/>
+			<img src="./assets/cards/high-priestess-c.png" class="tarot-img" alt="A woman in blue robes with a crown sits between a two pillars pillar with a tapestry of fronds and fruit behind her."/>
         </div>
         <div class="card">
-			<img src="./assets/cards/ten-of-pentacles-c.png" class="tarot" alt="A man and a woman beneath an archway which gives entrance to a house and domain"/>
+			<img src="./assets/cards/ten-of-pentacles-c.png" class="tarot-img" alt="A man and a woman beneath an archway which gives entrance to a house and domain"/>
          </div>
         <div class="card">
-			<img src="./assets/cards/ace-of-wands-c.png" class="tarot" alt="A hand issuing from a cloud over a field and mountain range grasps a stout Wand or Club"/>
+			<img src="./assets/cards/ace-of-wands-c.png" class="tarot-img" alt="A hand issuing from a cloud over a field and mountain range grasps a stout Wand or Club"/>
         </div> 
         <div class="card">
-			<img src="./assets/cards/star-c.png" class="tarot" alt="A nude woman pouring two jugs, one into a pond and one on the earth under a sky full of stars."/>
+			<img src="./assets/cards/star-c.png" class="tarot-img" alt="A nude woman pouring two jugs, one into a pond and one on the earth under a sky full of stars."/>
         </div>
         <div class="card">
-			<img src="./assets/cards/two-of-cups-c.png" class="tarot" alt="A youth and maiden are pledging to one another. Above their cups rises the caduceus of Hermes, between those great wings there appears a lion's head."/>
+			<img src="./assets/cards/two-of-cups-c.png" class="tarot-img" alt="A youth and maiden are pledging to one another. Above their cups rises the caduceus of Hermes, between those great wings there appears a lion's head."/>
         </div>
         <div class="card">
-			<img src="./assets/cards/king-of-wands-c.png" class="tarot" alt="A king sits on his throne, uplifting a flowering Wand and wears what is called a cap of maintenance beneath his crown. His throne is emblazoned with the symbol of the lion."/>
+			<img src="./assets/cards/king-of-wands-c.png" class="tarot-img" alt="A king sits on his throne, uplifting a flowering Wand and wears what is called a cap of maintenance beneath his crown. His throne is emblazoned with the symbol of the lion."/>
         </div>
       </section>
   </section>
