Make navbar responsive

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<meta name="viewport" content="width = device-width, initial-scale = 1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="./style.css">
     <title>TAROT</title>
@@ -11,22 +11,26 @@
 
     <nav>
 
-      <section class="page-buttons">
-        <button>READING</button>
-        <button>DICTIONARY</button>
-        <button>SHOP</button>
-      </section>
+      <div class="nav-container">
 
-      <section class="page-info">
+        <section class="page-buttons">
+          <button>READING</button>
+          <button>DICTIONARY</button>
+          <button>SHOP</button>
+        </section>
 
-        <div class="menu">
-  	    <img src="./assets/user-icon.png" id="user-icon" alt="user icon"/>
-        	<select class ="dropdown"><option>Eight Card Spread</option></select>
-  	    </div>
+        <section class="page-info">
 
-        <div>
-          <img src="./assets/logo.png" alt="logo" id="logo"/>
-        </div>
+          <div class="menu">
+    	    <img src="./assets/user-icon.png" id="user-icon" alt="user icon"/>
+          	<select class ="dropdown"><option>Eight Card Spread</option></select>
+    	    </div>
+
+          <div>
+            <img src="./assets/logo.png" alt="logo" id="logo"/>
+          </div>
+
+      </div>
 
       </section>
 
