--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<meta name="viewport" content="width = device-width, initial-scale = 1">
+  	<meta name="viewport" content="width=device-width, initial-scale = 1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="./style.css">
     <title>TAROT</title>
   </head>
 
   <body>
-
+    <!-- nav buttons NEED ICONS -->
     <nav>
 
       <div class="nav-container">
@@ -35,5 +35,93 @@
       </section>
 
     </nav>
+
+    <section class="content">
+
+      <h1>Reading</h1>
+
+      <section class="card-view">
+
+        <article class="card" id="card1">
+
+          <div>
+            <img src="./assets/cards/page-of-pentacles-c.png" class="tarot-img" alt="A youthful figure, looking intently at the pentacle that hovers over his raised hands"/>
+          </div>
+
+        </article>
+
+        <article class="card" id="card2">
+
+          <div>
+            <div>
+              <img src="./assets/cards/ace-of-pentacles-c.png" class="tarot-img" alt="A hand issuing from a cloud- holds up a pentacle over a garden with mountains in the distance."/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card3">
+
+          <div>
+            <div>
+              <img src="./assets/cards/high-priestess-c.png" class="tarot-img" alt="A woman in blue robes with a crown sits between a two pillars pillar with a tapestry of fronds and fruit behind her."/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card4">
+
+          <div>
+            <div>
+              <img src="./assets/cards/ten-of-pentacles-c.png" class="tarot-img" alt="A man and a woman beneath an archway which gives entrance to a house and domain"/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card5">
+
+          <div>
+            <div>
+              <img src="./assets/cards/ace-of-wands-c.png" class="tarot-img" alt="A hand issuing from a cloud over a field and mountain range grasps a stout Wand or Club"/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card6">
+
+          <div>
+            <div>
+              <img src="./assets/cards/star-c.png" class="tarot-img" alt="A nude woman pouring two jugs, one into a pond and one on the earth under a sky full of stars."/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card7">
+
+          <div>
+            <div>
+              <img src="./assets/cards/two-of-cups-c.png" class="tarot-img" alt="A youth and maiden are pledging to one another. Above their cups rises the caduceus of Hermes, between those great wings there appears a lion's head."/>
+            </div>
+          </div>
+
+        </article>
+
+        <article class="card" id="card8">
+
+          <div>
+            <div>
+              <img src="./assets/cards/king-of-wands-c.png" class="tarot-img" alt="A king sits on his throne, uplifting a flowering Wand and wears what is called a cap of maintenance beneath his crown. His throne is emblazoned with the symbol of the lion."/>
+            </div>
+          </div>
+
+        </article>
+
+      </section>
+
+    </section>
 
   </body>
