--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
             <img src="./assets/cards/page-of-pentacles-c.png" class="tarot-img" alt="A youthful figure, looking intently at the pentacle that hovers over his raised hands"/>
           </div>
 
+          <div class="card-info">
+            <h3 class="tarot-title">Page of Pentacles</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/page-of-pentacles-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/page-of-pentacles-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5> arcana </h5>
+            <h4 id="arcana">MINOR</h4>
+          </div>
+
+
         </article>
 
         <article class="card" id="card2">
@@ -57,6 +67,15 @@
             <div>
               <img src="./assets/cards/ace-of-pentacles-c.png" class="tarot-img" alt="A hand issuing from a cloud- holds up a pentacle over a garden with mountains in the distance."/>
             </div>
+          </div>
+
+          <div class="card-info" id="card3">
+            <h3 class="tarot-title">Ace of Pentacles</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ace-of-pentacles-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ace-of-pentacles-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5>arcana</h5>
+            <h4 id="arcana">minor</h4>
           </div>
 
         </article>
@@ -69,6 +88,15 @@
             </div>
           </div>
 
+          <div class="card-info">
+            <h3 class="tarot-title">The High Priestess</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/high-priestess-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/high-priestess-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5>arcana</h5>
+            <h4 id="arcana">major</h4>
+          </div>
+
         </article>
 
         <article class="card" id="card4">
@@ -79,6 +107,15 @@
             </div>
           </div>
 
+          <div class="card-info">
+    				<h3 class="tarot-title">Ten of Pentacles</h3>
+    				<blockquote>
+    					<a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ten-of-pentacles-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ten-of-pentacles-meaning-tarot-card-meanings</a>
+    				</blockquote>
+    				<h5>arcana</h5>
+    				<h4 id="arcana">minor</h4>
+    			</div>
+
         </article>
 
         <article class="card" id="card5">
@@ -87,6 +124,15 @@
             <div>
               <img src="./assets/cards/ace-of-wands-c.png" class="tarot-img" alt="A hand issuing from a cloud over a field and mountain range grasps a stout Wand or Club"/>
             </div>
+          </div>
+
+          <div class="card-info">
+            <h3 class="tarot-title">Ace of Wands</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ace-of-wands-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ace-of-wands-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5>arcana</h5>
+            <h4 id="arcana">minor</h4>
           </div>
 
         </article>
@@ -99,6 +145,15 @@
             </div>
           </div>
 
+          <div class="card-info">
+            <h3 class="tarot-title">The Star</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/star-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/star-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5>arcana</h5>
+            <h4 id="arcana">major</h4>
+          </div>
+
         </article>
 
         <article class="card" id="card7">
@@ -107,6 +162,15 @@
             <div>
               <img src="./assets/cards/two-of-cups-c.png" class="tarot-img" alt="A youth and maiden are pledging to one another. Above their cups rises the caduceus of Hermes, between those great wings there appears a lion's head."/>
             </div>
+          </div>
+
+          <div class="card-info">
+            <h3 class="tarot-title">Two of Cups</h3>
+            <blockquote>
+              <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/two-of-cups-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/Two-of-Cups-meaning-tarot-card-meanings</a>
+            </blockquote>
+            <h5>arcana</h5>
+            <h4 id="arcana">minor</h4>
           </div>
 
         </article>
@@ -118,6 +182,15 @@
               <img src="./assets/cards/king-of-wands-c.png" class="tarot-img" alt="A king sits on his throne, uplifting a flowering Wand and wears what is called a cap of maintenance beneath his crown. His throne is emblazoned with the symbol of the lion."/>
             </div>
           </div>
+
+          <div class="card-info">
+    				<h3 class="tarot-title">King of Wands</h3>
+    				<blockquote>
+    					<a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/king-of-wands-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/king-of-wands-meaning-tarot-card-meanings</a>
+    				</blockquote>
+    				<h5>arcana</h5>
+    				<h4 id="arcana">minor</h4>
+    			</div>
 
         </article>
 
