Update graphics and slight format changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
       <div class="nav-container">
 
         <section class="page-buttons">
-          <button>READING</button>
-          <button>DICTIONARY</button>
-          <button>SHOP</button>
+
+          <div class="button-box">
+            <img src="./assets/spread-icon.png" class="button-icon" alt="icon"/>
+            <button class="current-page">READING</button>
+          </div>
+
+          <div class="button-box">
+            <img src="./assets/dictionary-icon.png" class="button-icon" alt="icon"/>
+            <button>DICTIONARY</button>
+          </div>
+
+          <div class="button-box">
+            <img src="./assets/shop-icon.png" class="button-icon" alt="icon"/>
+            <button>SHOP</button>
+          </div>
         </section>
 
         <section class="page-info">
@@ -58,6 +70,9 @@
             <h4 id="arcana">MINOR</h4>
           </div>
 
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
+          </div>
 
         </article>
 
@@ -76,6 +91,10 @@
             </blockquote>
             <h5>arcana</h5>
             <h4 id="arcana">minor</h4>
+          </div>
+
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
           </div>
 
         </article>
@@ -97,6 +116,10 @@
             <h4 id="arcana">major</h4>
           </div>
 
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
+          </div>
+
         </article>
 
         <article class="card" id="card4">
@@ -116,6 +139,10 @@
     				<h4 id="arcana">minor</h4>
     			</div>
 
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
+          </div>
+
         </article>
 
         <article class="card" id="card5">
@@ -133,6 +160,10 @@
             </blockquote>
             <h5>arcana</h5>
             <h4 id="arcana">minor</h4>
+          </div>
+
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
           </div>
 
         </article>
@@ -154,6 +185,10 @@
             <h4 id="arcana">major</h4>
           </div>
 
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
+          </div>
+
         </article>
 
         <article class="card" id="card7">
@@ -171,6 +206,10 @@
             </blockquote>
             <h5>arcana</h5>
             <h4 id="arcana">minor</h4>
+          </div>
+
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
           </div>
 
         </article>
@@ -191,6 +230,10 @@
     				<h5>arcana</h5>
     				<h4 id="arcana">minor</h4>
     			</div>
+
+          <div>
+            <img src="./assets/icon.png" class= "crystal-ball" alt="a crystal ball icon" />
+          </div>
 
         </article>
 
