Finalize logo colors and responsive layout changes, fix for firefox

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
         <section class="page-info">
 
           <div class="menu">
-    	    <img src="./assets/user-icon.png" id="user-icon" alt="user icon"/>
+    	      <img src="./assets/user-icon.png" id="user-icon" alt="user icon"/>
           	<select class ="dropdown"><option>Eight Card Spread</option></select>
+            <img src="./assets/arrow.png" id="arrow" alt"dropdown icon"/>
     	    </div>
 
           <div>
@@ -90,7 +91,7 @@
               <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ace-of-pentacles-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ace-of-pentacles-meaning-tarot-card-meanings</a>
             </blockquote>
             <h5>arcana</h5>
-            <h4 id="arcana">minor</h4>
+            <h4 id="arcana">MINOR</h4>
           </div>
 
           <div>
@@ -113,7 +114,7 @@
               <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/high-priestess-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/high-priestess-meaning-tarot-card-meanings</a>
             </blockquote>
             <h5>arcana</h5>
-            <h4 id="arcana">major</h4>
+            <h4 id="arcana">MAJOR</h4>
           </div>
 
           <div>
@@ -136,7 +137,7 @@
     					<a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ten-of-pentacles-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ten-of-pentacles-meaning-tarot-card-meanings</a>
     				</blockquote>
     				<h5>arcana</h5>
-    				<h4 id="arcana">minor</h4>
+    				<h4 id="arcana">MINOR</h4>
     			</div>
 
           <div>
@@ -159,7 +160,7 @@
               <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/ace-of-wands-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/ace-of-wands-meaning-tarot-card-meanings</a>
             </blockquote>
             <h5>arcana</h5>
-            <h4 id="arcana">minor</h4>
+            <h4 id="arcana">MINOR</h4>
           </div>
 
           <div>
@@ -182,7 +183,7 @@
               <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/star-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/star-meaning-tarot-card-meanings</a>
             </blockquote>
             <h5>arcana</h5>
-            <h4 id="arcana">major</h4>
+            <h4 id="arcana">MAJOR</h4>
           </div>
 
           <div>
@@ -205,7 +206,7 @@
               <a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/two-of-cups-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/Two-of-Cups-meaning-tarot-card-meanings</a>
             </blockquote>
             <h5>arcana</h5>
-            <h4 id="arcana">minor</h4>
+            <h4 id="arcana">MINOR</h4>
           </div>
 
           <div>
@@ -228,7 +229,7 @@
     					<a href="https://labyrinthos.co/blogs/tarot-card-meanings-list/king-of-wands-meaning-tarot-card-meanings" class="tarot-meaning">https://labyrinthos.co/king-of-wands-meaning-tarot-card-meanings</a>
     				</blockquote>
     				<h5>arcana</h5>
-    				<h4 id="arcana">minor</h4>
+    				<h4 id="arcana">MINOR</h4>
     			</div>
 
           <div>
